# hercules-agent

./: .env.example  .gitignore  .replit  PRD.md  README.md  agent-loop.md  architecture.md  cidog_framework.py  install.js  install.ps1  install.sh  memory.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt  sessao.md  setup.py  skill-user.md  telegram-input.md  telegram-output.md  tsconfig.base.json  tsconfig.json  uninstall.js  vitest.config.ts
.changeset/: config.json
.github/workflows/: ci.yml  release.yml
config/: platforms.json
hercules_agent/: __init__.py  cli.py
hercules_agent/agent_loop/: agent_loop.py
hercules_agent/approval/: approval_manager.py
hercules_agent/browser/: browser_manager.py
hercules_agent/compression/: context_compressor.py
hercules_agent/core/: agent_controller.py  conversation_store.py  llm_provider.py  react_agent.py  telegram_handler.py  token_tracker.py
hercules_agent/cron/: cron_scheduler.py
hercules_agent/database/: database_manager.py
hercules_agent/docs/: document_processor.py
hercules_agent/gateways/: gateway.py
hercules_agent/interpreter/: code_interpreter.py
hercules_agent/llm/: provider.py
hercules_agent/mcp/: mcp_client.py
hercules_agent/memory/: memory_manager.py
hercules_agent/multiagent/: multi_agent_manager.py
hercules_agent/plugins/: plugin_manager.py
hercules_agent/profiles/: profile_manager.py
multi_agent/: multi_agent_manager.py
scripts/: com.hercules.gateway.plist  hercules-gateway.service  install-service.sh  uninstall-service.sh
(+12 files in other folders)
