[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hercules-agent"
version = "1.0.0"
description = "Modular AI Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fernando Roldão", email = "feroldao@gmail.com"}
]
keywords = ["ai", "agent", "llm", "gpt", "hermes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.24.0",
    "tiktoken>=0.5.0",
    "pillow>=10.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
voice = [
    "edge-tts>=6.1.0",
    "faster-whisper>=0.10.0",
]
browser = [
    "playwright>=1.40.0",
]

[project.scripts]
hercules = "hercules_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hercules_agent*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false